<resources>
    <string name="app_name">MyStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Category">Category</string>
    <string name="MyCart">My Cart</string>
    <string name="MyOrders">My Orders</string>
    <string name="NewProduct">New Products</string>
    <string name="Offers">Offers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>