<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mystore.ui.home.HomeFragment"
        android:label="@string/Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mystore.ui.profile.ProfileFragment"
        android:label="@string/Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.mystore.ui.Category.CategoryFragment"
        android:label="@string/Category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/offersFragment"
        android:name="com.example.mystore.Fragments.OffersFragment"
        android:label="fragment_offers"
        tools:layout="@layout/fragment_offers" />
    <fragment
        android:id="@+id/newProductsFragment"
        android:name="com.example.mystore.Fragments.NewProductsFragment"
        android:label="fragment_new_products"
        tools:layout="@layout/fragment_new_products" />
    <fragment
        android:id="@+id/myOrdersFragment"
        android:name="com.example.mystore.Fragments.MyOrdersFragment"
        android:label="fragment_my_orders"
        tools:layout="@layout/fragment_my_orders" />
    <fragment
        android:id="@+id/myCartFragment"
        android:name="com.example.mystore.Fragments.MyCartFragment"
        android:label="fragment_my_cart"
        tools:layout="@layout/fragment_my_cart" />
</navigation>